# stackystars

./: README.md  pyproject.toml
src/stackystars/: main.py
